# kawaraGEX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
include/: Engine.h
include/GEX/: GEX.h  GEX_Attachment.h  GEX_Engine.h  GEX_GameObject.h  GEX_Object.h  GEX_Scene.h  GEX_Transform.h
include/GEX/core/: Attachment.h  Engine.h  Object.h
include/GEX/core/attachments/: Transform.h
include/GEX/scene/: GameObject.h  Scene.h
lib/cmake/: SDL3Config.cmake
src/core/: Engine.cpp  Object.cpp
src/core/attachments/: Transform.cpp
src/scene/: GameObject.cpp  Scene.cpp
